[tool.poetry]
name = "litepy"
version = "0.1.0"
description = "A Python API wrapper for Litecoin0"
authors = ["hularuns <159131400+hularuns@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
